# viam-ros-noetic-integration

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  TODO.md  main.py  requirements.txt  run.sh  viam-config.json
components/: __init__.py  ros_base.py  ros_camera.py  ros_imu.py  ros_lidar.py  ros_sensor.py  ros_timed_cache.py  rosbag_sensor.py
docs/: Components.md  DataFiltering.md  Services.md
filtering/: __init__.py
filtering/cache/: component_cache.py  global_event_table.py
filtering/filter_caching/: component_cache.py  global_event_table.py
filtering/filters/: base_filter.py  fake_filter.py
filters/: __init__.py
full_tests/: README.md
proto/: noetic_filter.proto  noetic_logger.proto
services/logger/: api.py  service.py
services/noetic_filter/: api.py  service.py
services/noetic_logger/: __init__.py  api.py  service.py
tests/: __init__.py  global_event_table_tests.py
utils/: __init__.py  cache_inspection.py  quaternion.py  rospy_utils.py
viam_ws/: README.md
viam_ws/src/viam_event_data/: CMakeLists.txt  package.xml  setup.py
viam_ws/src/viam_event_data/launch/: event_setup.launch  usb_camera_and_event.launch
viam_ws/src/viam_event_data/msg/: Event.msg
viam_ws/src/viam_event_data/scripts/: generate_data.py  listen_to_events.py  publish_event.py
viam_ws/src/viam_event_data/src/viam_event_data/: event_types.py
viam_ws/src/viam_event_data/srv/: SetEvent.srv
